--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@prisma/adapter-pg": "^5.18.0",
     "@prisma/client": "^5.18.0",
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
@@ -45,6 +46,7 @@
     "eslint-config-standard": "^17.1.0",
     "graphql": "^16.9.0",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.12.0",
     "save-dev": "^0.0.1-security"
   }
 }
