--- a/Frontend/my-app/package.json
+++ b/Frontend/my-app/package.json
@@ -10,10 +10,22 @@
   },
   "dependencies": {
     "@huggingface/inference": "^2.8.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.435.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
