--- a/Frontend/my-app/package.json
+++ b/Frontend/my-app/package.json
@@ -12,6 +12,7 @@
     "@huggingface/inference": "^2.8.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/react-sortable-tree": "^0.3.23",
     "axios": "^1.7.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -19,9 +20,12 @@
     "lucide-react": "^0.435.0",
     "next": "14.2.5",
     "react": "^18",
+    "react-calendar": "^5.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-sortable-tree": "^2.8.0",
+    "react-sortable-tree-theme-full-node-drag": "^1.1.0",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "tailwind-merge": "^2.5.2",
